--- a/about.html
+++ b/about.html
@@ -4,4 +4,4 @@ title: About
 header-img: "img/about-bg.png"
 ---
 
-<p></p>
+<p>Professional and enthusiast: Aviation, Coding, and Lifelong Learning!</p>
