--- a/about.html
+++ b/about.html
@@ -4,4 +4,15 @@ title: About
 header-img: "img/about-bg.png"
 ---
 
-<p>Professional and enthusiast: Aviation, Coding, and Lifelong Learning!</p>
+<h3 class="text-center text-uppercase">Maverick Tesini</h3>
+<p><blockquote>"I'm a full stack web dev that loves adventuring, learning, and smiling!"</blockquote>
+I believe we are more than four word sentences. I am a coder. I am a pilot. I am a motorcyclist. I am a swimmer. I am more than four words.</p>
+
+<h3 class="text-center text-uppercase">A Blog</h3>
+<p>It's my coding blog. It's  a mashup of thoughts, project overviews, and some tips here and there.</p>
+
+<h3 class="text-center text-uppercase">Momentum</h3>
+<p>Memories fade, people are imperfect, and there is always more to learn! These posts are mainly here for me. If they help anyone else, inspire a laugh,
+  or even result in later corrections: wonderful. Documented tasks are building blocks to improvement. Blog posts are a great way to force a mental review.
+  They are also a great way to read up on how I went about something in the past. You're welcome, future self!
+</p>
