do css redesign. Alter headings and links

--- a/about.html
+++ b/about.html
@@ -1,15 +1,16 @@
 ---
 layout: page
-title: About
+title: ': About :'
 header-img: "img/about-bg.png"
+description: www.mavericktesini.com
 ---
 
 <h3 class="text-center text-uppercase">Maverick Tesini</h3>
 <p><blockquote>"I'm a full stack web dev that loves adventuring, learning, and smiling!"</blockquote>
-I believe we are more than four word sentences. I am a coder. I am a pilot. I am a motorcyclist. I am a swimmer. I am more than four words.</p>
+I believe we are more than a four word sentence. I am a coder. I am a pilot. I am a motorcyclist. I am a swimmer. I am more than four words.</p>
 
 <h3 class="text-center text-uppercase">A Blog</h3>
-<p>It's my coding blog. It's  a mashup of thoughts, project overviews, and some tips here and there.</p>
+<p>This is my coding blog. It's  a mashup of thoughts, project overviews, and some tips here and there.</p>
 
 <h3 class="text-center text-uppercase">Momentum</h3>
 <p>Memories fade, people are imperfect, and there is always more to learn! These posts are mainly here for me. If they help anyone else, inspire a laugh,
